@@ -7,7 +7,7 @@ use parent 'Exporter';
 use Test::Builder;
 use Class::Method::Modifiers ();
 
-our @EXPORT_OK = qw(allow_warnings allowing_warnings had_no_warnings);
+our @EXPORT_OK = qw(allow_warnings allowing_warnings had_no_warnings warnings);
 our %EXPORT_TAGS = ( all => \@EXPORT_OK );
 
 my $warnings_allowed;
@@ -42,6 +42,17 @@ $SIG{__WARN__} = sub {
     warn $msg;
     $forbidden_warnings_found++ if not $warnings_allowed;
 };
+
+sub warnings(&)
+{
+    my $code = shift;
+    my @warnings;
+    local $SIG{__WARN__} = sub {
+        push @warnings, shift;
+    };
+    $code->();
+    @warnings;
+}
 
 if (Test::Builder->can('done_testing'))
 {
@@ -159,6 +170,20 @@ C<allowing_warnings> call.  It is run
 automatically at the end of all tests, but can also be called manually at any
 time, as often as desired.
 
+=item * C<< warnings( { code } ) >>
+
+Given a code block, runs the block and returns a list of all the
+(not previously allowed via C<allow_warnings>) warnings issued within.  This
+lets you test for the presence of warnings that you not only would I<allow>,
+but I<must> be issued.  Testing functions are not provided; given the strings
+returned, you can test these yourself using your favourite testing functions,
+such as L<Test::More::is|Test::More> or L<Test::Deep::cmp_deeply|Test::Deep>.
+
+Warnings generated by this code block are I<NOT> propagated further. However,
+since they are returned from this function with their filename and line
+numbers intact, you can re-issue them yourself immediately after calling
+C<warnings(...)>, if desired.
+
 =back
 
 =head1 OTHER OPTIONS
@@ -179,7 +204,9 @@ time, as often as desired.
 
 =item * C<< warning_is, warning_like etc... >> - inclusion of some
 L<Test::Warn>-like functionality for testing the content of warnings, but
-closer to a L<Test::Fatal>-like syntax
+closer to a L<Test::Fatal>-like syntax -- tentatively done now, see
+C<warnings> above, and C<examples/test_warning_contents.t> in this
+distribution.
 
 =item * more sophisticated handling in subtests - if we save some state on the
 L<Test::Builder> object itself, we can allow warnings in a subtest and then
@@ -200,5 +227,9 @@ L<Test::NoWarnings>
 L<Test::FailWarnings>
 
 L<blogs.perl.org: YANWT (Yet Another No-Warnings Tester)|http://blogs.perl.org/users/ether/2013/03/yanwt-yet-another-no-warnings-tester.html>
+
+L<Test::Warn>
+
+L<Test::Fatal>
 
 =cut
