@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+          - new feature: warnings { code }, for capturing the contents of
+            warnings for subsequent testing
 
 0.002     2013-03-14 14:47:30 PDT-0700 (Karen Etheridge)
           Releasing as non-TRIAL for greater visibility.
